Move Env to Git

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,6 +10,9 @@ name: Deploy to Firebase Hosting on merge
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    env:
+      VITE_PHOTO_KEY: "${{ secrets.NEEDFORPHOTO }}"
+      VITE_BASE_URL: "${{ secrets.PHOTOFROM }}"
     steps:
       - uses: actions/checkout@v4
       - run: npm install && npm run build
